<resources>
    <string name="app_name">androidPrincipies</string>
    <string name="broadcast">Broadcast</string>
    <string name="service">Service</string>
    <string name="fragment">Fragment ONE</string>
    <string name="stop_service">Stop Service</string>
    <string name="binding_service">Binding Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_two">Button two</string>
    <string name="my_default_text_from_activity">My Default Text from Activity</string>
    <string name="Services">Button</string>
    <string name="start_service">start service</string>
    <string name="lesson_95_start">lesson 95 start</string>
    <string name="startandroidbroadcastexample">StartAndroidBroadCastExample</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
</resources>
